--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AZURE_SQL_CONNECTIONSTRING": "Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 } 
